# iar-vsc-build

./: .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .markdownlint.jsonc  .vscodeignore  .yo-rc.json  CONTRIBUTING.md  README.md  Rakefile.rb  extension.code-workspace  package-lock.json  package.json  prettier.config.js  tsconfig.base.json  tsconfig.json  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: build.yml  deploy.yml
.husky/: pre-commit  pre-commit.js
Extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  README.md  build.rb  package-lock.json  package.json  thrift-0.14.0.tgz  tsconfig.json  tslint.json  webpack.config.js
Extension/media/: settingsview.css  settingsview.js
Extension/sqlite-bin/: sqlite-v3.37.0-linux-x86
Extension/src/: extensionmanager.ts  main.ts
Extension/test/: runTests.ts  (+1 more)
build-scripts/: pipeline.groovy
docs/: README.md  _config.yml  adding-toolchains.md  building.md  conf.py  index.md  index.rst  language-extensions.md  productivity.md  project-files.md
media/: settingsview.css  settingsview.js  toolbarview.css  toolbarview.js
src/: extension.ts  extensionmanager.ts  main.ts  tsconfig.json
syntaxes/: iar-c-cpp.tmLanguage.json
tests/: .eslintrc.json  README.md  generate_projects.py  runTests.ts  template_arm.ewp  template_rh850.ewp  template_riscv.ewp  template_rl78.ewp  template_rx.ewp  testconfiguration.ts
tests/vscodeTests/TestProjects/skeleton/CMakeProject/: CMakeLists.txt
webviews/: .eslintrc.js  .eslintrc.json  global.d.ts  tsconfig.json
(+621 files in other folders)
